--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <script src="js/seedrandom.min.js"></script>
     <script src="js/pako.min.js"></script>
     <script src="js/WordsHide.js"></script>
+    <script src="js/index.js"></script>
     <!--    busuanzi backup-->
     <!--
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
