--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </p>
         </div>
         <p>
-            <a href="https://github.com/NitroRCr/Words-away">Github</a><br>
+            <a href="https://github.com/NitroRCr/WordsHide">Github</a><br>
             <a href="index.html">Home</a>
         </p>
         <div style="height: 50px;"></div>
