--- a/index.html
+++ b/index.html
@@ -11,6 +11,45 @@
 </head>
 
 <body>
+    <a href="https://github.com/NitroRCr/UnicodeFont" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+            <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+            <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+            <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+        </svg></a>
+    <style>
+        .github-corner:hover .octo-arm {
+            animation: octocat-wave 560ms ease-in-out
+        }
+
+        @keyframes octocat-wave {
+
+            0%,
+            100% {
+                transform: rotate(0)
+            }
+
+            20%,
+            60% {
+                transform: rotate(-25deg)
+            }
+
+            40%,
+            80% {
+                transform: rotate(10deg)
+            }
+        }
+
+        @media (max-width:500px) {
+            .github-corner:hover .octo-arm {
+                animation: none
+            }
+
+            .github-corner .octo-arm {
+                animation: octocat-wave 560ms ease-in-out
+            }
+        }
+
+    </style>
     <div class="container">
         <h1 style="font-weight: bold; font-size: 2em">隐藏文本</h1>
         <p>这是一个加密隐藏文本的工具，通过将文本编码为不可见的Unicode控制符，实现对该段文本的隐藏。可将该文本插入到普通文本中，复制粘贴不会丢失，解码后可见。</p>
@@ -91,10 +130,10 @@
 </pre>
         </div>
         <div class="back-results">
-            <p style="font-weight: bold">密文部分 原文：</p>
+            <p style="font-weight: bold">隐藏部分 原文：</p>
             <pre class="result">请先转换
 </pre>
-            <button data-clipboard-text="请先转换" class="waves-effect waves-light btn-small hide-to-copy">复制</button>
+            <button data-clipboard-text="请先转换" class="waves-effect waves-light btn-small back-to-copy">复制</button>
             <p style="font-weight: bold">明文:</p>
             <pre class="light-text">请先转换
 </pre>
@@ -109,21 +148,16 @@
                 将含有隐藏文本的文本粘贴回来，用还原模式即可将隐藏文本还原为原文本。
             </p>
             <p>
-                加密隐藏时为了方便复制，会把隐藏文本放在两个空格之间。如果隐藏文本缺失一部分就无法被还原。
+                加密隐藏时为了方便复制，会把隐藏文本放在前、后段文本之间，或者两个空格之间。
             </p>
             <p>
                 对于长文本，“压缩”选项可以减小加密隐藏后文本的实际大小。<br>
-                “加密”选项可以将任意文本作为密码。
+                “密码”选项可以将任意文本作为加密密码。
             </p>
             <p>
                 如果隐藏时选中了“压缩”，那么还原时也必须选中“压缩”。
             </p>
         </div>
-        <p>
-            <a href="https://github.com/NitroRCr/WordsHide">Github</a><br>
-            <a href="index.html">Home</a>
-        </p>
-        <div style="height: 50px;"></div>
     </div>
     <div style="height: 100px;"></div>
     <!--    busuanzi backup-->
