--- a/index.html
+++ b/index.html
@@ -119,13 +119,12 @@
                 </div>
             </form>
         </div>
-        <div style="height: 25px"></div>
         <div class="hide-results">
             <p style="font-weight: bold">密文：</p>
             <pre class="result">请先转换
 </pre>
             <button data-clipboard-text="请先转换" class="waves-effect waves-light btn-small hide-to-copy">复制</button>
-            <p style="font-weight: bold">明文:</p>
+            <p style="font-weight: bold">明文(Unicode):</p>
             <pre class="light-text">请先转换
 </pre>
         </div>
