改进 解码时自动识别模式

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                             </label>
                         </div>
                         <div class="switch">
-                            <label>
+                            <label class="if-compress">
                                 <input type="checkbox" class="filled-in" id="if-compress" />
                                 <span>压缩</span>
-                            </label><br>
+                            </label>
                             <label>
                                 <input type="checkbox" class="filled-in" id="if-encrypt" />
                                 <span>密码</span>
@@ -152,9 +152,6 @@
             <p>
                 对于长文本，“压缩”选项可以减小加密隐藏后文本的实际大小。<br>
                 “密码”选项可以将任意文本作为加密密码。
-            </p>
-            <p>
-                如果隐藏时选中了“压缩”，那么还原时也必须选中“压缩”。
             </p>
         </div>
     </div>
